--- a/Frontend/render.yaml
+++ b/Frontend/render.yaml
@@ -1,4 +1,12 @@
-routes:
-  - type: rewrite
-    source: /*
-    destination: /index.html 
+services:
+  - type: web
+    name: portfolio-frontend
+    buildCommand: npm install && npm run build
+    startCommand: npm run preview
+    routes:
+      - type: rewrite
+        source: /proyectos
+        destination: /index.html
+      - type: rewrite
+        source: /*
+        destination: /index.html 
