--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -27,3 +27,18 @@ dist-ssr
 .env
 .env.local
 .env.*.local
+
+# Documentation files (except README.md)
+CAMBIOS_REDISEÑO.md
+RESUMEN_FINAL.md
+GUIA_RAPIDA.md
+INSTRUCCIONES_FINALES.md
+RESUMEN_EJECUTIVO.md
+INICIO_RAPIDO.md
+MEJORAS_FRONTEND.md
+INSTRUCCIONES_MUNDO_TINTA.txt
+LEEME_PRIMERO.txt
+RESUMEN_COMPLETO_FINAL.md
+PROBLEMAS_SOLUCIONADOS.md
+PROMPT_REDISEÑO_TECH.md
+COMO_USAR_PROMPT.txt
