cambio de diseño

--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -42,3 +42,7 @@ RESUMEN_COMPLETO_FINAL.md
 PROBLEMAS_SOLUCIONADOS.md
 PROMPT_REDISEÑO_TECH.md
 COMO_USAR_PROMPT.txt
+REDISEÑO_TECH_PROGRESO.md
+CORRECCIONES_APLICADAS.md
+RESUMEN_FINAL_TECH.txt
+TODOS_LOS_PROBLEMAS_RESUELTOS.md
